--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       </div>
       <button type="submit" class="btn btn-default" onclick="chat()">Submit</button>
     </div>
+    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.283.1.min.js"></script>
+    <script src="amazon-cognito-identity.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="lib/axios/dist/axios.standalone.js"></script>
@@ -32,6 +34,6 @@
     <script type="text/javascript" src="lib/apiGatewayCore/simpleHttpClient.js"></script>
     <script type="text/javascript" src="lib/apiGatewayCore/utils.js"></script>
     <script type="text/javascript" src="apigClient.js"></script>
-    <script src="script.js"></script>
+   <script src="script.js"></script>
   </body>
 </html>
